--- a/css/band.css
+++ b/css/band.css
@@ -85,11 +85,7 @@ header nav {
 header nav .main-nav {
   display: flex;
   align-items: center;
-}
-
-header nav .main-nav > li {
-  padding: 10px 0;
-  position: relative;
+  height: 100%;
 }
 
 header nav .main-nav li:hover .mega-menu {
@@ -120,7 +116,7 @@ header nav .main-nav > li:last-child > a::after {
 
 header nav .main-nav li .mega-menu {
   position: absolute;
-  top: 42px;
+  top: 46px;
   box-shadow: 0 2px 10px rgba(0 0 0 / 20%);
   background-color: var(--alt-color);
   display: none;
@@ -164,11 +160,6 @@ header a i {
 @media (max-width: 767px) {
   header .icon {
     display: inline;
-  }
-
-  header .icon:hover {
-    display: block;
-    color: red;
   }
 
   header > a {
@@ -389,7 +380,7 @@ header a i {
 }
 
 .contact .form input[type="text"]:nth-child(1) {
-  margin-right: 12px;
+  margin-right: 10px;
 }
 
 .contact .form input {
